--- a/to_revisit.yaml
+++ b/to_revisit.yaml
@@ -11,3 +11,6 @@ projects:
   - name: tagtool
     repo_url: https://gitlab.com/tagtool/tagtool
     reason: low commit count. also, tried it out, seemed interesting, but confusing in its current state.
+  - name: rapidbay
+    repo_url: https://github.com/hauxir/rapidbay/
+    reason: bit young, 1 contributor, low commit count (93)
